flux normalisation test

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 lib/
+libagilesci.xcodeproj/project.xcworkspace/xcuserdata/bulgarelli.xcuserdatad/UserInterfaceState.xcuserstate
 obj/
 prefix
 version
